--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --light: #f3f3f3;
+    --dark: #1f1f1f;
+    --red: rgb(179, 0, 0);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -10,7 +16,7 @@ html, body {
 
 main {
     padding: 45px;
-    background-color: #1f1f1f;
+    background-color: var(--dark);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -20,7 +26,7 @@ main {
 }
 
 a {
-    color: #fff;
+    color: var(--light);
     font-size: 14px;
     font-weight: 500;
 }
@@ -34,9 +40,9 @@ a {
 }
 
 .box {
-    border: 2px solid #fff;
-    color: #fff;
-    background-color: rgb(179, 0, 0);
+    border: 2px solid var(--light);
+    color: var(--light);
+    background-color: var(--red);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,8 +72,8 @@ a {
 .box input {
     padding: 8px 10px;
     background: transparent;
-    color: #fff;
-    border: 2px solid #fff;
+    color: var(--light);
+    border: 2px solid var(--light);
     border-radius: 10px;
     overflow: hidden;
     font-size: 18px;
@@ -76,8 +82,8 @@ a {
 .box button {
     padding: 8px 10px;
     background: transparent;
-    color: #fff;
-    border: 2px solid #fff;
+    color: var(--light);
+    border: 2px solid var(--light);
     border-radius: 10px;
     overflow: hidden;
     font-size: 18px;
@@ -87,9 +93,9 @@ a {
 
 .box::after {
     content: 'V4 Ames & CO';
-    color: rgb(179, 0, 0);
-    background-color: #fff;
-    border: 2px solid #fff;
+    color: var(--red);
+    background-color: var(--light);
+    border: 2px solid var(--light);
     border-radius: 0 0 10px 10px;
     position: absolute;
     bottom: 0;
@@ -104,7 +110,7 @@ a {
 
 .box::before {
     content: 'Oauth2';
-    color: #fff;
+    color: var(--light);
     border-radius: 10px 10px 0 0;
     position: absolute;
     top: 0;
@@ -116,4 +122,24 @@ a {
     transform: translate(-50%, calc(-100% + 10px));
     font-size: 24px;
     z-index: -10;
+}
+
+table {
+    border: solid 1px var(--light);
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    font-size: 16px;
+}
+table thead th {
+    background-color: var(--dark);
+    border: solid 1px var(--light);
+    color: var(--light);
+    padding: 10px;
+    text-align: left;
+}
+table tbody td {
+    border: solid 1px var(--light);
+    color: var(--light);
+    padding: 10px;
 }
